--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 <body>
     <h1>Informacion del estudiante</h1>
     <div>Nombre del estudiante :</div>
+    <div>adaleza sanz </div>
+
 </body>
 </html>
