--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>Informacion del estudiante</h1>
     <div>Nombre del estudiante :</div>
     <div>adaleza sanz </div>
+    <div>semestre :</div>
     <h1>Hobbies: </h1>
 
 </body>
