--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div>Nombre del estudiante :</div>
     <div>adaleza sanz </div>
     <div>semestre :</div>
+    <div>sexto semestre</div>
     <h1>Hobbies: </h1>
 
 </body>
