--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <div>semestre :</div>
     <div>sexto semestre</div>
     <h1>Hobbies: </h1>
+    <div>jugar voleibol</div>
+
 
 </body>
 </html>
