--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div>sexto semestre</div>
     <h1>Hobbies: </h1>
     <div>jugar voleibol</div>
+    <div>escuchar musica</div>
+    
 
 
 </body>
