--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <h1>Hobbies: </h1>
     <div>jugar voleibol</div>
     <div>escuchar musica</div>
+    <h1>series: </h1>
     
+
+
+
 
 
 </body>
